--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,7 @@ body {
                 <li>
                   
                   <div class="skill-box wow fadeInLeft animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                  <a href="mlsapro.com">Home</a>
+                  <a href="mlsapro.com/home">Home</a>
                   </div>
 
                 </li>
@@ -195,7 +195,7 @@ body {
                 <li>
 
                   <div class="skill-box wow fadeInLeft animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                  <a href="https://mlsapro.com/Contact">Contact</a>
+                  <a href="https://mlsapro.com/contact">Contact</a>
                   </div>
 
                 </li>
@@ -218,9 +218,6 @@ body {
         </nav>
 
     <!-- Header End -->
-
-
-
     <!-- Hero Details Start -->
 
         <div class="header-content">
