--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,7 @@ body {
                 <li>
                   
                   <div class="skill-box wow fadeInLeft animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                  <a href="./src/index.html">Home</a>
+                  <a href="./src">Home</a>
                   </div>
 
                 </li>
