--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -166,7 +166,7 @@ body {
                 <li>
                   
                   <div class="skill-box wow fadeInLeft animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                  <a href="mlsapro.com/home">Home</a>
+                  <a href="https://mlsapro.com/home">Home</a>
                   </div>
 
                 </li>
@@ -218,9 +218,7 @@ body {
         </nav>
 
     <!-- Header End -->
-
-
-
+    <!-- Hero Details Start -->
 <!-- Contact Start -->
 
   <section class="contact" id="contact">
