--- a/src/blogs/index.html
+++ b/src/blogs/index.html
@@ -166,7 +166,7 @@ body {
                 <li>
                   
                   <div class="skill-box wow fadeInLeft animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                  <a href="mlsapro.com/home">Home</a>
+                  <a href="https://mlsapro.com/home">Home</a>
                   </div>
 
                 </li>
@@ -218,8 +218,7 @@ body {
         </nav>
 
     <!-- Header End -->
-
-
+    <!-- Hero Details Start -->
  <!-- Hire Me Start -->
 
       <div class="container" style="text-align:center;">
