--- a/src/index.html
+++ b/src/index.html
@@ -218,7 +218,7 @@ body {
               </div>
 
               <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-              <a href="https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc" class="btn-header">View Proof  of Ambassadorship</a>
+              <a href="https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc%20?wt.mc_id=studentamb_281705" class="btn-header">View Proof  of Ambassadorship</a>
               </div>
 
     <!-- Hero Details End -->
