--- a/src/index.html
+++ b/src/index.html
@@ -376,7 +376,29 @@ body {
 
     <script src="./js/app.js"></script>
     <script src="js/script.js"></script>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBvZ0OrPv_wb7u9Ghjze_h9pZcLFMPmLhc",
+    authDomain: "mlsapro.firebaseapp.com",
+    projectId: "mlsapro",
+    storageBucket: "mlsapro.appspot.com",
+    messagingSenderId: "628713986367",
+    appId: "1:628713986367:web:03cbfbecf9352f21241b8a",
+    measurementId: "G-HK4T6P9LJ7"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
   </body>
 
 </html>
