--- a/src/home/index.html
+++ b/src/home/index.html
@@ -268,7 +268,7 @@ body {
 
             <h3 class="gradient-title-sm">About</h3>
             <p class="text">
-            Greetings, I'm Shahzal Rehman, Senior Graphic Designer and UI/UX Designer. Sole proprietorship.
+            Greetings, This is Official Microsoft Learn Student Ambassadors Website......You can Contat us at mlsapro@stdntpartners.onmicrosoft.com
             </p>
           </div>
 
