--- a/src/home/index.html
+++ b/src/home/index.html
@@ -246,10 +246,10 @@ body {
               <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
               <a href="https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc%20?wt.mc_id=studentamb_281705" class="btn-header">View Proof  of Ambassadorship</a>
               </div></center> <br> <left>
-               <div> <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+               <br> <div> <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
               <a href="https://sites.google.com/view/sr-advance-excle" class="btn-header">SR EXCle Project</a> <br> 
                     
-                 <center><div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+               <br>  <center><div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
               <a href="https://sites.google.com/view/shahzal" class="btn-header">Achievements Of Shahzal Rehman</a> </center>
                      <br>
               </div><right>
