--- a/src/home/index.html
+++ b/src/home/index.html
@@ -95,7 +95,7 @@ body {
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Title  -->
-    <title>MLSAPRO Official</title>
+    <title>Shahzal Rehman</title>
 
     <!-- favicon  -->
     <link rel="shortcut icon" type="image/jpg" href="img\favicon\icon128.png"/>
@@ -117,15 +117,7 @@ body {
   
   </head>
   
-  <body><script>
-        // Check if the user is already logged in
-        window.addEventListener('DOMContentLoaded', function() {
-            if (localStorage.getItem('isLoggedIn') !== 'true') {
-                // Redirect the user to the login page
-                window.location.href = 'https://mlsapro.com/';
-            }
-        });
-    </script>
+  <body>
 <!-- Hero Image Start -->
 
     <main>
@@ -209,18 +201,24 @@ body {
           </div>
         </nav>
 
+    <!-- Header End -->
+ <!-- Hero Details Start -->
+
         <div class="header-content">
           <div class="container grid-2">
             <div class="column-1">
               <div class="skill-box wow fadeInLeft animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-              <h1 class="header-title">MLSAPRO Official</h1>
+              <h1 class="header-title">MLSA PRO</h1>
               </div>
 
               <div class="skill-box wow fadeInRight animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;">
                 <p class="header-text">
-                Greetings, This is Official Microsoft Learn Student Ambassadors Website......You can Contat us at mlsapro@stdntpartners.onmicrosoft.com
+                Microsoft Learn Student Ambassador Professionals - Official Chapter. Aiming To Provide Fostering Environment To Students With Innovation In Tech.
               </p>
               </div>
+
+    <!-- Hero Details End -->
+
 
             </div>
             <div class="column-2 image">
@@ -235,6 +233,7 @@ body {
           </div>
         </div>
       </header>
+
 <br>
 <center>
               <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
