--- a/src/home/index.html
+++ b/src/home/index.html
@@ -212,7 +212,7 @@ body {
       </div>
 
       <div class="skill-box wow fadeInRight animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;">
-        <p class="header-text" style="color: blue;"> <!-- Changed text color to blue -->
+        <p class="header-text" style="color: Silver;"> <!-- Changed text color to blue -->
           Microsoft Learn Student Ambassador Professionals - Official Chapter. Aiming To Provide Fostering Environment To Students With Innovation In Tech.
         </p>
       </div>
