--- a/src/home/index.html
+++ b/src/home/index.html
@@ -204,21 +204,18 @@ body {
     <!-- Header End -->
  <!-- Hero Details Start -->
 
-   <div class="header-content">
-  <div class="container grid-2">
-    <div class="column-1">
-      <div class="skill-box wow fadeInLeft animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-        <h1 class="header-title" style="color: blue;">MLSA PRO</h1> <!-- Changed text color to blue -->
-      </div>
+        <div class="header-content">
+          <div class="container grid-2">
+            <div class="column-1">
+              <div class="skill-box wow fadeInLeft animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+              <h1 class="header-title">MLSA PRO</h1>
+              </div>
 
-      <div class="skill-box wow fadeInRight animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;">
-        <p class="header-text" style="color: Silver;"> <!-- Changed text color to blue -->
-          Microsoft Learn Student Ambassador Professionals - Official Chapter. Aiming To Provide Fostering Environment To Students With Innovation In Tech.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
+              <div class="skill-box wow fadeInRight animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;">
+                <p class="header-text">
+               Microsoft Learn Student Ambassador Professionals.
+              </p>
+              </div>
 
     <!-- Hero Details End -->
 
@@ -236,7 +233,6 @@ body {
           </div>
         </div>
       </header>
-
 <br>
 <center>
               <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
