--- a/src/home/index.html
+++ b/src/home/index.html
@@ -241,7 +241,16 @@ body {
             </div>
           </div>
         </div>
-      </header>
+      </header> <br>     <div class="back-btn-wrap">
+              <a href="#" class="back-btn">
+                <i class="fas fa-chevron-up"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
 <br>
 <center>
               <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
