--- a/src/home/index.html
+++ b/src/home/index.html
@@ -241,7 +241,8 @@ body {
             </div>
           </div>
         </div>
-      </header> <br>     <div class="back-btn-wrap">
+      </header> <br>    
+<centre></centre> <div class="back-btn-wrap">
               <a href="#" class="back-btn">
                 <i class="fas fa-chevron-up"></i>
               </a>
@@ -249,7 +250,7 @@ body {
           </div>
         </div>
       </div>
-    </footer>
+    </footer> </main> </centre>
 
 <br>
 <center>
