--- a/src/home/index.html
+++ b/src/home/index.html
@@ -242,15 +242,12 @@ body {
           </div>
         </div>
       </header> <br>    
-<centre></centre> <div class="back-btn-wrap">
-              <a href="#" class="back-btn">
-                <i class="fas fa-chevron-up"></i>
-              </a>
+<centre> <div class="back-btn-wrap">
+                            <i class="fas fa-chevron-up"></i>
+             
             </div>
-          </div>
-        </div>
-      </div>
-    </footer> </main> </centre>
+        
+    </centre>
 
 <br>
 <center>
