--- a/src/home/index.html
+++ b/src/home/index.html
@@ -242,11 +242,16 @@ body {
           </div>
         </div>
       </header> <br>    
-<centre> <div class="back-btn-wrap">
-                            <i class="fas fa-chevron-up"></i>
-             
+<centre> </centre>     <div class="back-btn-wrap">
+              <a href="#" class="back-btn">
+                <i class="fas fa-chevron-up"></i>
+              </a>
             </div>
-        
+          </div>
+        </div>
+      </div>
+    </footer>
+
     </centre>
 
 <br>
