--- a/src/home/index.html
+++ b/src/home/index.html
@@ -353,14 +353,14 @@ body {
 
             <h3 class="gradient-title-sm">About</h3>
             <p class="text">
-            Greetings, This is Official Microsoft Learn Student Ambassadors Website......You can Contat us at mlsapro@stdntpartners.onmicrosoft.com
+            Greetings, This is Official Microsoft Learn Student Ambassadors Website...paste our id ( ?wt.mc_id=studentamb_281705 ) at end of each url you share...You can Contat us at mlsapro@stdntpartners.onmicrosoft.com
             </p>
           </div>
 
           <div class="grid-4-col footer-links">
             <h3 class="gradient-title-sm">Links</h3>
             <ul>
-               <a href="mailto:mlsapro@stdntpartners.onmicrosoft.com">Mail</a>
+               <a href="mailto:mlsapro@stdntpartners.onmicrosoft.com">Mail ?wt.mc_id=studentamb_281705  password of books is "sr" and "SR"</a>
        
               </li>
             </ul>
