--- a/src/home/index.html
+++ b/src/home/index.html
@@ -289,7 +289,7 @@ body {
               <a href="https://mlsapro.com/Book2.xlsx?wt.mc_id=studentamb_281705" class="btn-header">Book2.xlsx</a> <br> 
                     
                <br>  <center><div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-              <a href="https://mlsapro.com/Book3%20%201.xlsx?wt.mc_id=studentamb_281705" class="Book3 1.xlsx">Achievements Of Shahzal Rehman</a> </center>
+              <a href="https://mlsapro.com/Book3%20%201.xlsx?wt.mc_id=studentamb_281705" class="Book3 1.xlsx">Book 3 (1)</a> </center>
                      <br>
               </div><right>
                         <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
