--- a/src/index.html
+++ b/src/index.html
@@ -175,8 +175,8 @@ body {
       <div class="login-container">
         <h2>Login</h2>
         <form id="login-form">
-            <input type="text" id="username" placeholder="Username" required>
-            <input type="password" id="password" placeholder="Password" required>
+            <input type="text" id="username" placeholder="Username" required><br><br><br><br><br><br>
+            <input type="password" id="password" placeholder="Password" required><br><br><br><br><br><br>
             <input type="submit" value="Login">
         </form>
         <p id="error-message">Invalid username or password!</p>
