--- a/src/index.html
+++ b/src/index.html
@@ -173,10 +173,10 @@ body {
   
   <body>
       <div class="login-container">
-        <h2>Login -"mlsapro" .</h2><br><br><br><br>
+        <h2>Login -"mlsapro" .</h2><br><br>
         <form id="login-form">
-            <input type="text" id="username" placeholder="Username" required><br><br><br><br><br><br>
-            <input type="password" id="password" placeholder="Password" required><br><br><br><br><br><br>
+            <input type="text" id="username" placeholder="Username" required><br><br>
+            <input type="password" id="password" placeholder="Password" required><br><br>
             <input type="submit" value="Login">
         </form>
         <p id="error-message">Invalid username or password!</p>
@@ -215,11 +215,7 @@ body {
             }
         });
     </script>
-<iframe width="640px" height="480px" src="https://forms.office.com/r/ZhxEsz4Una?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
- <br>
-                  <div class="skill-box wow fadeInLeft animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                  <a href="https://stdntpartners-my.sharepoint.com/:x:/g/personal/shahzal_rehman_studentambassadors_com/EcxDuk8YN41NoLc72Ealj3QBLYHnHf5JvOXsPdfAInMpwA?e=EichxG">Live Results</a>
-                  </div>
+
   </body>
 
 </html>
