--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,12 @@ body {
         </form>
         <p id="error-message">Invalid username or password!</p>
     </div>
-
+<br><div> <a href="https://stdntpartners-my.sharepoint.com/:x:/g/personal/shahzal_rehman_studentambassadors_com/EcxDuk8YN41NoLc72Ealj3QBLYHnHf5JvOXsPdfAInMpwA?e=EichxG">Live Results</a>
+</div><br><iframe width="640px" height="480px" src="https://forms.office.com/r/ZhxEsz4Una?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+ <br>
+                  <div class="skill-box wow fadeInLeft animated" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                  <a href="https://stdntpartners-my.sharepoint.com/:x:/g/personal/shahzal_rehman_studentambassadors_com/EcxDuk8YN41NoLc72Ealj3QBLYHnHf5JvOXsPdfAInMpwA?e=EichxG">Live Results</a>
+ 
     <script>
         document.getElementById('login-form').addEventListener('submit', function(event) {
             event.preventDefault(); // Prevent default form submission
