--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@ body {
         </form>
         <p id="error-message">Invalid username or password!</p>
     </div>
-<br><div> <a href="https://mlsapro.com/home">------------</a>
+<br><div> <a href="https://stdntpartners-my.sharepoint.com/:x:/g/personal/shahzal_rehman_studentambassadors_com/EcxDuk8YN41NoLc72Ealj3QBLYHnHf5JvOXsPdfAInMpwA?e=EichxG">------------</a>
 </div><br><iframe width="640px" height="480px" src="https://forms.office.com/r/ZhxEsz4Una?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe> 
     <script>
         document.getElementById('login-form').addEventListener('submit', function(event) {
