--- a/src/blogs/index.html
+++ b/src/blogs/index.html
@@ -1,21 +1,16 @@
-<!-- favicon  -->
-<link rel="shortcut icon" type="image/jpg" href="img\favicon\icon128.png"/>
-
-<html>
-   <meta charset="UTF-8">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to the personal website of Shahzal Rehman, a Microsoft Learn Student Ambassador. Contact Shahzal at info@shahzalrehman.tech for inquiries.">
     <meta name="author" content="Shahzal Rehman">
     <meta name="keywords" content="Shahzal Rehman, Microsoft Learn, Student Ambassador, tech enthusiast">
-
-    <!-- Tell Google to display contact information -->
     <meta name="google-site-verification" content="google-site-verification=Zh2kBBPJG7GZezC82-kdDvFdwV0mOOdgQsFUG8HYpYo">
-
     <title>Shahzal Rehman - Microsoft Learn Student Ambassador</title>
-    <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="img/favicon/icon128.png">
-
-   <style>
+    <style>
+        <style>
         body {
             overflow: overlay;
             font-family: Arial, sans-serif;
@@ -75,6 +70,7 @@
             transform: scale(1.2);
         }
     </style>
+    </style>
 </head>
 <body>
     <header>
@@ -82,68 +78,60 @@
     </header>
     <div class="container">
         <!-- Image 1 -->
-        <div class="image">
-            <img src="img/image1.jpg" alt="Shahzal Rehman in Childhood" title="Shahzal Rehman in Childhood">
-            <meta itemprop="contentUrl" content="img/image1.jpg">
+        <div class="image" itemscope itemtype="http://schema.org/ImageObject">
+            <img src="img/image1.jpg" alt="Shahzal Rehman in Childhood" title="Shahzal Rehman in Childhood" itemprop="contentUrl">
             <meta itemprop="description" content="Shahzal Rehman in Childhood">
         </div>
         <!-- Image 2 -->
-        <div class="image">
-            <img src="img/image2.jpg" alt="Shahzal Rehman Official Picture With MVP Proof" title="Shahzal Rehman Official Picture With MVP Proof">
-            <meta itemprop="contentUrl" content="img/image2.jpg">
+        <div class="image" itemscope itemtype="http://schema.org/ImageObject">
+            <img src="img/image2.jpg" alt="Shahzal Rehman Official Picture With MVP Proof" title="Shahzal Rehman Official Picture With MVP Proof" itemprop="contentUrl">
             <meta itemprop="description" content="Shahzal Rehman Official Picture With MVP Proof">
         </div>
         <!-- Image 3 -->
-        <div class="image">
-            <img src="img/image3.jpg" alt="Dragon And Cat By Shahzal Rehman. Microsoft" title="Dragon And Cat By Shahzal Rehman. Microsoft">
-            <meta itemprop="contentUrl" content="img/image3.jpg">
+        <div class="image" itemscope itemtype="http://schema.org/ImageObject">
+            <img src="img/image3.jpg" alt="Dragon And Cat By Shahzal Rehman. Microsoft" title="Dragon And Cat By Shahzal Rehman. Microsoft" itemprop="contentUrl">
             <meta itemprop="description" content="Dragon And Cat By Shahzal Rehman. Microsoft">
         </div>
-        
+        <!-- Image 4 -->
+        <div class="image" itemscope itemtype="http://schema.org/ImageObject">
+            <img src="img/image4.jpg" alt="Copilot Challenge By Shahzal Rehman" title="Copilot Challenge By Shahzal Rehman" itemprop="contentUrl">
+            <meta itemprop="description" content="Copilot Challenge By Shahzal Rehman">
+        </div>
         <!-- Image 5 -->
-        <div class="image">
-            <img src="img/image5.jpg" alt="Gold Swag Box .MLSA. Shahzal Rehman" title="Gold Swag Box .MLSA. Shahzal Rehman">
-            <meta itemprop="contentUrl" content="img/image5.jpg">
+        <div class="image" itemscope itemtype="http://schema.org/ImageObject">
+            <img src="img/image5.jpg" alt="Gold Swag Box .MLSA. Shahzal Rehman" title="Gold Swag Box .MLSA. Shahzal Rehman" itemprop="contentUrl">
             <meta itemprop="description" content="Gold Swag Box .MLSA. Shahzal Rehman">
         </div>
         <!-- Image 6 -->
-        <div class="image">
-            <img src="img/image6.jpg" alt="Shahzal Rehman Dark vibrant" title="Shahzal Rehman Dark vibrant">
-            <meta itemprop="contentUrl" content="img/image6.jpg">
+        <div class="image" itemscope itemtype="http://schema.org/ImageObject">
+            <img src="img/image6.jpg" alt="Shahzal Rehman Dark vibrant" title="Shahzal Rehman Dark vibrant" itemprop="contentUrl">
             <meta itemprop="description" content="Shahzal Rehman Dark vibrant">
         </div>
         <!-- Image 7 -->
-        <div class="image">
-            <img src="img/image7.jpg" alt="Shahzal Rehman in Royal Dress" title="Shahzal Rehman in Royal Dress">
-            <meta itemprop="contentUrl" content="img/image7.jpg">
+        <div class="image" itemscope itemtype="http://schema.org/ImageObject">
+            <img src="img/image7.jpg" alt="Shahzal Rehman in Royal Dress" title="Shahzal Rehman in Royal Dress" itemprop="contentUrl">
             <meta itemprop="description" content="Shahzal Rehman in Royal Dress">
         </div>
         <!-- Image 8 -->
-        <div class="image">
-            <img src="img/image8.jpg" alt="Shahzal Rehman in Royal Dress Black" title="Shahzal Rehman in Royal Dress Black">
-            <meta itemprop="contentUrl" content="img/image8.jpg">
+        <div class="image" itemscope itemtype="http://schema.org/ImageObject">
+            <img src="img/image8.jpg" alt="Shahzal Rehman in Royal Dress Black" title="Shahzal Rehman in Royal Dress Black" itemprop="contentUrl">
             <meta itemprop="description" content="Shahzal Rehman in Royal Dress Black">
         </div>
         <!-- Image 9 -->
-        <div class="image">
-            <img src="img/image9.jpg" alt="Shahzal Rehman on Bike" title="Shahzal Rehman on Bike">
-            <meta itemprop="contentUrl" content="img/image9.jpg">
+        <div class="image" itemscope itemtype="http://schema.org/ImageObject">
+            <img src="img/image9.jpg" alt="Shahzal Rehman on Bike" title="Shahzal Rehman on Bike" itemprop="contentUrl">
             <meta itemprop="description" content="Shahzal Rehman on Bike">
         </div>
         <!-- Image 10 -->
-        <div class="image">
-            <img src="img/image10.jpg" alt="Shahzal Rehman in Mountains" title="Shahzal Rehman in Mountains">
-            <meta itemprop="contentUrl" content="img/image10.jpg">
+        <div class="image" itemscope itemtype="http://schema.org/ImageObject">
+            <img src="img/image10.jpg" alt="Shahzal Rehman in Mountains" title="Shahzal Rehman in Mountains" itemprop="contentUrl">
             <meta itemprop="description" content="Shahzal Rehman in Mountains">
         </div>
         <!-- Image 11 -->
-        <div class="image">
-            <img src="img/image11.jpg" alt="Shahzal Rehman With Luxury Car" title="Shahzal Rehman With Luxury Car">
-            <meta itemprop="contentUrl" content="img/image11.jpg">
+        <div class="image" itemscope itemtype="http://schema.org/ImageObject">
+            <img src="img/image11.jpg" alt="Shahzal Rehman With Luxury Car" title="Shahzal Rehman With Luxury Car" itemprop="contentUrl">
             <meta itemprop="description" content="Shahzal Rehman With Luxury Car">
         </div>
     </div>
-</body>
-</html>
 </body>
 </html>
