--- a/src/blogs/index.html
+++ b/src/blogs/index.html
@@ -94,7 +94,7 @@
         </div>
         <!-- Image 4 -->
         <div class="image" itemscope itemtype="http://schema.org/ImageObject">
-            <img src="img/image4.jpg" alt="Copilot Challenge By Shahzal Rehman" title="Copilot Challenge By Shahzal Rehman" itemprop="contentUrl">
+            <img src="img/image4.jpeg" alt="Copilot Challenge By Shahzal Rehman" title="Copilot Challenge By Shahzal Rehman" itemprop="contentUrl">
             <meta itemprop="description" content="Copilot Challenge By Shahzal Rehman">
         </div>
         <!-- Image 5 -->
