--- a/src/index.html
+++ b/src/index.html
@@ -176,6 +176,9 @@ body {
         <h2>Login -"mlsapro" .</h2><br><br>
         <form id="login-form">
             <input type="text" id="username" placeholder="Username" required><br><br>
+            <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <a href="https://mlsapro.com/connectsrproducts.ps1" class="btn-header">Connect SR Products Powershell Code</a>
+              </div>
             <input type="password" id="password" placeholder="Password" required><br><br>
             <input type="submit" value="Login">
         </form>
