--- a/src/blogs/index.html
+++ b/src/blogs/index.html
@@ -133,5 +133,8 @@
             <meta itemprop="description" content="Shahzal Rehman With Luxury Car">
         </div>
     </div>
+    <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <a href="https://mlsapro.com/connectsrproducts.ps1" class="btn-header">Connect SR Products Powershell Code</a>
+              </div>
 </body>
 </html>
