--- a/src/blogs/index.html
+++ b/src/blogs/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to the personal website of Shahzal Rehman, a Microsoft Learn Student Ambassador. Contact Shahzal at info@shahzalrehman.tech for inquiries.">
+    <meta name="description" content="Shahzal Rehman,a Microsoft Learn Student Ambassador. Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https:.//facebook.com/shahzal.rehman.official or https:.//facebook.com/shahzal.rehmani.official for inquiries.">
     <meta name="author" content="Shahzal Rehman">
-    <meta name="keywords" content="Shahzal Rehman, Microsoft Learn, Student Ambassador, tech enthusiast">
+     <meta name="author" content="Shahzal Rehman Official">
+<meta name="author" content="shahzal">
+<meta name="author" content="shahzal rehman">
+    <meta name="author" content="shahzal Rehman Official">
+    <meta name="keywords" content="Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https:.//facebook.com/shahzal.rehman.official or https:.//facebook.com/shahzal.rehmani.official for inquiries.,Shahzal mlsapro,shahzal mlsa,shahzal rehman microsoft learn student ambassador,shahzal rehman official blogs,Shahzal Rehman, Microsoft Learn, Student Ambassador, tech enthusiast,Shahzal,shahzal,shahzal rehman,shahzal rehman official,Shahzal pictures,shahzal pictures,shahzal rehman pictures,shahzal rehman official pictures">
     <meta name="google-site-verification" content="google-site-verification=Zh2kBBPJG7GZezC82-kdDvFdwV0mOOdgQsFUG8HYpYo">
-    <title>Shahzal Rehman - Microsoft Learn Student Ambassador</title>
+    <title>Shahzal Rehman Official - Microsoft Learn Student Ambassador Blogs</title>
     <link rel="shortcut icon" type="image/png" href="img/favicon/icon128.png">
     <style>
         <style>
@@ -135,6 +139,9 @@
     </div>
     <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
               <a href="https://mlsapro.com/connectsrproducts.ps1" class="btn-header">Connect SR Products Powershell Code</a>
+              </div>
+    <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <a href="https://www.facebook.com/shahzal.rehman.official" class="btn-header">Shahzal Rehman,a Microsoft Learn Student Ambassador. Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https:.//facebook.com/shahzal.rehman.official or https:.//facebook.com/shahzal.rehmani.official or https://www.facebook.com/mlsa.pro.official for inquiries.</a>
               </div>
 </body>
 </html>
