--- a/src/blogs/index.html
+++ b/src/blogs/index.html
@@ -138,7 +138,7 @@
         </div>
     </div>
     <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-              <a href="https://mlsapro.com/connectsrproducts.ps1" class="btn-header">Connect SR Products Powershell Code</a>
+              <a href="https://mlsapro.com/shahzalshare.txt" class="btn-header">Connect Shahzal Share Powershell Code</a>
               </div>
     <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
               <a href="https://www.facebook.com/shahzal.rehman.official" class="btn-header">Shahzal Rehman,a Microsoft Learn Student Ambassador. Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https:.//facebook.com/shahzal.rehman.official or https:.//facebook.com/shahzal.rehmani.official or https://www.facebook.com/mlsa.pro.official for inquiries.</a>
