--- a/src/index.html
+++ b/src/index.html
@@ -142,6 +142,7 @@ body {
     <meta name="description" content="Shahzal Rehman,a Microsoft Learn Student Ambassador. Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https:.//facebook.com/shahzal.rehman.official or https:.//facebook.com/shahzal.rehmani.official for inquiries.">
     <meta name="author" content="Shahzal Rehman">
      <meta name="author" content="Shahzal Rehman Official">
+      <meta name="google-adsense-account" content="ca-pub-7334601574145044">
 <meta name="author" content="shahzal">
 <meta name="author" content="shahzal rehman">
     <meta name="author" content="shahzal Rehman Official">
