--- a/src/blogs/index.html
+++ b/src/blogs/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Shahzal Rehman,a Microsoft Learn Student Ambassador. Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https:.//facebook.com/shahzal.rehman.official or https:.//facebook.com/shahzal.rehmani.official for inquiries.">
     <meta name="author" content="Shahzal Rehman">
-     <meta name="author" content="Shahzal Rehman Official">
+     <meta name="author" content="Shahzal Rehman Official"><meta name="google-adsense-account" content="ca-pub-7334601574145044">
 <meta name="author" content="shahzal">
 <meta name="author" content="shahzal rehman">
     <meta name="author" content="shahzal Rehman Official">
