--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -83,7 +83,7 @@ body {
 <html lang="en">
   
   <head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7334601574145044"
-     crossorigin="anonymous"></script>
+     crossorigin="anonymous"></script><meta name="google-adsense-account" content="ca-pub-7334601574145044">
       <script async custom-element="amp-auto-ads"
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
 </script>
