--- a/src/home/index.html
+++ b/src/home/index.html
@@ -83,7 +83,7 @@ body {
 <html lang="en">
   
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"><meta name="google-adsense-account" content="ca-pub-7334601574145044">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Shahzal Rehman,a Microsoft Learn Student Ambassador. Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https:.//facebook.com/shahzal.rehman.official or https:.//facebook.com/shahzal.rehmani.official for inquiries.">
     <meta name="author" content="Shahzal Rehman">
