--- a/src/index.html
+++ b/src/index.html
@@ -187,12 +187,8 @@ body {
       <div class="login-container">
         <h2>Login -"mlsapro" .</h2><br><br>
         <form id="login-form">
-            <input type="text" id="username" placeholder="Username" required><br><br>
-            <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-              <a href="https://mlsapro.com/shahzalshare.txt" class="btn-header">Connect Shahzal Share Powershell ISE Code for Windows 10/11</a>
-              </div> <br> <br>
-            <input type="password" id="password" placeholder="Password" required><br><br>
-            <input type="submit" value="Login">
+           <a href="https://stdntpartners-my.sharepoint.com/:x:/g/personal/shahzal_rehman_studentambassadors_com/EcxDuk8YN41NoLc72Ealj3QBLYHnHf5JvOXsPdfAInMpwA?e=EichxG">------------</a>
+</div><br><iframe width="640px" height="480px" src="https://forms.office.com/r/ZhxEsz4Una?embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
         </form>
         <p id="error-message">Invalid username or password!</p>
     </div>
