--- a/src/home/index.html
+++ b/src/home/index.html
@@ -130,14 +130,30 @@ body {
   
   <body> 
 <script>
-        // Check if the user is already logged in
-        window.addEventListener('DOMContentLoaded', function() {
-            if (localStorage.getItem('isLoggedIn') !== 'true') {
-                // Redirect the user to the login page
-                window.location.href = 'https://mlsapro.com/';
-            }
-        });
-    </script> 
+    // Check if the user is already logged in
+    window.addEventListener('DOMContentLoaded', function() {
+        if (localStorage.getItem('isLoggedIn') !== 'true') {
+            // Redirect the user to the login page
+            window.location.href = 'https://login.microsoftonline.com/5db603e4-5a09-41bf-a36d-618c9e6bf0d0/oauth2/v2.0/authorize';
+        }
+    });
+
+    // Function to handle successful authentication and set the flag
+    function handleSuccessfulAuthentication() {
+        // Set a flag indicating the user is logged in
+        localStorage.setItem('isLoggedIn', 'true');
+        // Redirect the user to the home page or any other page you prefer
+        window.location.href = 'https://mlsapro.com/home';
+    }
+
+    // Example usage:
+    // After successful authentication, your application receives the authorization code
+    // You then validate this code with your server-side code
+    // If validation is successful, call handleSuccessfulAuthentication() to set the flag and redirect the user
+    // handleSuccessfulAuthentication();
+</script>
+
+
 <!-- Hero Image Start -->
 
     <main>
