--- a/src/home/index.html
+++ b/src/home/index.html
@@ -97,7 +97,16 @@ body {
      crossorigin="anonymous"></script>
       <script async custom-element="amp-auto-ads"
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
-</script>
+</script><script>
+        // Check if the user is already authenticated
+        window.addEventListener('DOMContentLoaded', function() {
+            const accessToken = localStorage.getItem('accessToken');
+            if (!accessToken) {
+                // Redirect the user to the Microsoft Azure AD login page
+                window.location.href = 'https://login.microsoftonline.com/5db603e4-5a09-41bf-a36d-618c9e6bf0d0/oauth2/v2.0/authorize?client_id=9ec16646-a913-4fdb-8249-08fb1d98b99d&response_type=code&redirect_uri=https://mlsapro.com/home&scope=user.read';
+            }
+        });
+    </script>
       <amp-auto-ads type="adsense"
         data-ad-client="ca-pub-7334601574145044">
 </amp-auto-ads>
@@ -129,16 +138,7 @@ body {
   </head>
   
   <body> 
-<script>
-        // Check if the user is already authenticated
-        window.addEventListener('DOMContentLoaded', function() {
-            const accessToken = localStorage.getItem('accessToken');
-            if (!accessToken) {
-                // Redirect the user to the Microsoft Azure AD login page
-                window.location.href = 'https://login.microsoftonline.com/5db603e4-5a09-41bf-a36d-618c9e6bf0d0/oauth2/v2.0/authorize?client_id=9ec16646-a913-4fdb-8249-08fb1d98b99d&response_type=code&redirect_uri=https://mlsapro.com/home&scope=user.read';
-            }
-        });
-    </script>
+
 
 
 <!-- Hero Image Start -->
